# ipu_ray_lib

./: CMakeLists.txt  LICENSE  LITERATE_TEST.ipynb  README.md  test.cpp  trace.cpp
assets/: hdri_test.dae  monkey_bust.glb  test_scene.dae
assets/nif/urban_alley_01_4k_fp16_yuv/assets.extra/: nif_metadata.txt
codelets/: TraceCodelets.cpp  debug_print.hpp
ext/math/: README.md  sincos.cpp  sincos.hpp
include/: Arrays.hpp  BxDF.hpp  CompactBVH2Node.hpp  CompactBvh.hpp  CompactBvhBuild.hpp  Intersection.hpp  IpuScene.hpp  Material.hpp  Mesh.hpp  Primitives.hpp  RayCallback.hpp  Render.hpp  Scene.hpp  app_utils.hpp  geometric_sampling.hpp  io_utils.hpp  ipu_utils.hpp  precision_utils.hpp  scene_utils.hpp  xoshiro.hpp
include/embree_utils/: EmbreeScene.hpp  bvh.hpp  geometry.hpp  io.hpp  node.hpp  shapes.hpp
include/serialisation/: Deserialiser.hpp  Serialiser.hpp  deserialisation.hpp  serialisation.hpp
src/: CompactBVH2Node.cpp  CompactBvhBuild.cpp  IpuScene.cpp  Mesh.cpp  Node.cpp  Primitives.cpp  RayCallback.cpp  app_utils.cpp  scene_utils.cpp
src/keras/: CMakeLists.txt  Hdf5Model.cpp  Hdf5Model.hpp  model_to_hdf5.py
src/neural_networks/: CMakeLists.txt  DenseLayer.hpp  IoBuffer.cpp  IoBuffer.hpp  NifMetaData.cpp  NifMetaData.hpp  NifModel.cpp  NifModel.hpp
tests/: TestStruct.hpp  codelets.cpp  deserialisation.hpp  serialisation.hpp  test.cpp
